    * Added support for direct sync

    programmer visible changes:
    * InstlClient.get_binaries_versions renamed get_version_of_installed_binaries
    * Fixed regex that reads InfoMaps to correctly identify dl_path fields
    * Fixed SVNTable.mark_required_files_for_active_items to correctly indentify files and folders that were wtared
    * Fixed creation of paths for download on windows

8/3/2017 1.3.3.5

    programmer visible changes:
    * Unique constraint on IndexItemDetailRow so to avoid duplicate rows
    * rearranged th triggers that create require../ details in table IndexItemDetailRow
    * repr_require_for_yaml avoids duplicate entries
    * info_map_table and items_table are now only initialized when needed
    * database can be configured to have a unique name in each run
    * database can be forced to be on disk even when instl runs compiled
    * new table ConfigVar that will be populated with config variables values

    user visible changes client:
    * fixed issue where __ALL_ITEMS_IID__ & __ALL_GUIDS_IID__ would not be calculated correctly
    * new config var __DATABASE_URL__ to contain the url of the database

    user visible changes admin:
    * initialize self.items_table in InstlAdmin

6/3/2017 1.3.3.4
    user visible changes client:
    * new IID detail value "phantom_version" for cases where require_version does not exist and cannot be deduced from disk.

2/3/2017 1.3.3.3

    programmer visible changes:
    * IndexItemRow.status renamed install_status
    * Constants for IndexItemsTable.install_status in IndexItemsTable.install_status
    * New column IndexItemRow.ignore - to ignore iids found in variables
        DO_NOT_REMOVE_TARGETS, MAIN_IGNORED_TARGETS
    * New function IndexItemsTable.set_ignore_iids to set IndexItemRow.ignore
    * New utils functions quoteme_single_list, quoteme_double_list will quote all strings in a list