@@ -8,6 +8,8 @@
     * Fixed regex that reads InfoMaps to correctly identify dl_path fields
     * Fixed SVNTable.mark_required_files_for_active_items to correctly indentify files and folders that were wtared
     * Fixed creation of paths for download on windows
+    * SVNTable.read_file_sizes: admin 'trans' command stopped working because bulk_update_mappings would not find the updated rows.
+        So rows are now updated one by one.
 
 8/3/2017 1.3.3.5
 
